src/pyparser.output
State 18 conflicts: 1 shift/reduce
State 19 conflicts: 2 shift/reduce
State 27 conflicts: 5 shift/reduce
State 39 conflicts: 1 shift/reduce
State 52 conflicts: 5 shift/reduce
State 59 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: /* empty */
    2      | input class_def
    3      | input func_def
    4      | input calls_chain
    5      | input other_token

    6 class_def: CLASS classname inheritance COLON suite

    7 classname: ID

    8 inheritance: /* empty */
    9            | LBRACE class_args_list RBRACE

   10 class_args_list: /* empty */
   11                | class_arg

   12 class_arg: ID
   13          | class_arg COMMA
   14          | class_arg ID
   15          | class_arg DOT

   16 func_def: DEF funcname LBRACE func_args_list RBRACE COLON suite

   17 funcname: ID

   18 func_args_list: /* empty */
   19               | func_arg

   20 func_arg: dotted_name
   21         | star_arg
   22         | func_arg OTHER
   23         | func_arg COMMA
   24         | func_arg dotted_name
   25         | func_arg star_arg
   26         | func_arg MESSAGE

   27 star_arg: STAR ID
   28         | STAR STAR ID

   29 suite: /* empty */

   30 calls_chain: func_call
   31            | func_call DOT func_call

   32 func_call: dotted_name LBRACE call_params RBRACE

   33 dotted_name: ID
   34            | dotted_name DOT ID

   35 call_params: /* empty */
   36            | OTHER
   37            | DEFINED
   38            | MESSAGE
   39            | dotted_name
   40            | STAR
   41            | func_call
   42            | call_params DEFINED
   43            | call_params MESSAGE
   44            | call_params dotted_name
   45            | call_params OTHER
   46            | call_params func_call
   47            | call_params COMMA
   48            | call_params COLON
   49            | call_params STAR
   50            | call_params LBRACE call_params RBRACE

   51 other_token: dotted_name
   52            | DEFINED
   53            | COLON
   54            | DOT
   55            | OTHER
   56            | COMMA
   57            | STAR
   58            | MESSAGE
   59            | LBRACE
   60            | RBRACE


Terminals, with rules where they appear

$end (0) 0
error (256)
CLASS (258) 6
DEFINED (259) 37 42 52
COLON (260) 6 16 48 53
DOT (261) 15 31 34 54
LBRACE (262) 9 16 32 50 59
RBRACE (263) 9 16 32 50 60
ID (264) 7 12 14 17 27 28 33 34
OTHER (265) 22 36 45 55
DEF (266) 16
COMMA (267) 13 23 47 56
STAR (268) 27 28 40 49 57
MESSAGE (269) 26 38 43 58


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
input (16)
    on left: 1 2 3 4 5, on right: 0 2 3 4 5
class_def (17)
    on left: 6, on right: 2
classname (18)
    on left: 7, on right: 6
inheritance (19)
    on left: 8 9, on right: 6
class_args_list (20)
    on left: 10 11, on right: 9
class_arg (21)
    on left: 12 13 14 15, on right: 11 13 14 15
func_def (22)
    on left: 16, on right: 3
funcname (23)
    on left: 17, on right: 16
func_args_list (24)
    on left: 18 19, on right: 16
func_arg (25)
    on left: 20 21 22 23 24 25 26, on right: 19 22 23 24 25 26
star_arg (26)
    on left: 27 28, on right: 21 25
suite (27)
    on left: 29, on right: 6 16
calls_chain (28)
    on left: 30 31, on right: 4
func_call (29)
    on left: 32, on right: 30 31 41 46
dotted_name (30)
    on left: 33 34, on right: 20 24 32 34 39 44 51
call_params (31)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50,
    on right: 32 42 43 44 45 46 47 48 49 50
other_token (32)
    on left: 51 52 53 54 55 56 57 58 59 60, on right: 5


state 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


state 1

    0 $accept: input . $end
    2 input: input . class_def
    3      | input . func_def
    4      | input . calls_chain
    5      | input . other_token

    $end     shift, and go to state 2
    CLASS    shift, and go to state 3
    DEFINED  shift, and go to state 4
    COLON    shift, and go to state 5
    DOT      shift, and go to state 6
    LBRACE   shift, and go to state 7
    RBRACE   shift, and go to state 8
    ID       shift, and go to state 9
    OTHER    shift, and go to state 10
    DEF      shift, and go to state 11
    COMMA    shift, and go to state 12
    STAR     shift, and go to state 13
    MESSAGE  shift, and go to state 14

    class_def    go to state 15
    func_def     go to state 16
    calls_chain  go to state 17
    func_call    go to state 18
    dotted_name  go to state 19
    other_token  go to state 20


state 2

    0 $accept: input $end .

    $default  accept


state 3

    6 class_def: CLASS . classname inheritance COLON suite

    ID  shift, and go to state 21

    classname  go to state 22


state 4

   52 other_token: DEFINED .

    $default  reduce using rule 52 (other_token)


state 5

   53 other_token: COLON .

    $default  reduce using rule 53 (other_token)


state 6

   54 other_token: DOT .

    $default  reduce using rule 54 (other_token)


state 7

   59 other_token: LBRACE .

    $default  reduce using rule 59 (other_token)


state 8

   60 other_token: RBRACE .

    $default  reduce using rule 60 (other_token)


state 9

   33 dotted_name: ID .

    $default  reduce using rule 33 (dotted_name)


state 10

   55 other_token: OTHER .

    $default  reduce using rule 55 (other_token)


state 11

   16 func_def: DEF . funcname LBRACE func_args_list RBRACE COLON suite

    ID  shift, and go to state 23

    funcname  go to state 24


state 12

   56 other_token: COMMA .

    $default  reduce using rule 56 (other_token)


state 13

   57 other_token: STAR .

    $default  reduce using rule 57 (other_token)


state 14

   58 other_token: MESSAGE .

    $default  reduce using rule 58 (other_token)


state 15

    2 input: input class_def .

    $default  reduce using rule 2 (input)


state 16

    3 input: input func_def .

    $default  reduce using rule 3 (input)


state 17

    4 input: input calls_chain .

    $default  reduce using rule 4 (input)


state 18

   30 calls_chain: func_call .
   31            | func_call . DOT func_call

    DOT  shift, and go to state 25

    DOT       [reduce using rule 30 (calls_chain)]
    $default  reduce using rule 30 (calls_chain)


state 19

   32 func_call: dotted_name . LBRACE call_params RBRACE
   34 dotted_name: dotted_name . DOT ID
   51 other_token: dotted_name .

    DOT     shift, and go to state 26
    LBRACE  shift, and go to state 27

    DOT       [reduce using rule 51 (other_token)]
    LBRACE    [reduce using rule 51 (other_token)]
    $default  reduce using rule 51 (other_token)


state 20

    5 input: input other_token .

    $default  reduce using rule 5 (input)


state 21

    7 classname: ID .

    $default  reduce using rule 7 (classname)


state 22

    6 class_def: CLASS classname . inheritance COLON suite

    LBRACE  shift, and go to state 28

    $default  reduce using rule 8 (inheritance)

    inheritance  go to state 29


state 23

   17 funcname: ID .

    $default  reduce using rule 17 (funcname)


state 24

   16 func_def: DEF funcname . LBRACE func_args_list RBRACE COLON suite

    LBRACE  shift, and go to state 30


state 25

   31 calls_chain: func_call DOT . func_call

    ID  shift, and go to state 9

    func_call    go to state 31
    dotted_name  go to state 32


state 26

   34 dotted_name: dotted_name DOT . ID

    ID  shift, and go to state 33


state 27

   32 func_call: dotted_name LBRACE . call_params RBRACE

    DEFINED  shift, and go to state 34
    ID       shift, and go to state 9
    OTHER    shift, and go to state 35
    STAR     shift, and go to state 36
    MESSAGE  shift, and go to state 37

    DEFINED   [reduce using rule 35 (call_params)]
    ID        [reduce using rule 35 (call_params)]
    OTHER     [reduce using rule 35 (call_params)]
    STAR      [reduce using rule 35 (call_params)]
    MESSAGE   [reduce using rule 35 (call_params)]
    $default  reduce using rule 35 (call_params)

    func_call    go to state 38
    dotted_name  go to state 39
    call_params  go to state 40


state 28

    9 inheritance: LBRACE . class_args_list RBRACE

    ID  shift, and go to state 41

    $default  reduce using rule 10 (class_args_list)

    class_args_list  go to state 42
    class_arg        go to state 43


state 29

    6 class_def: CLASS classname inheritance . COLON suite

    COLON  shift, and go to state 44


state 30

   16 func_def: DEF funcname LBRACE . func_args_list RBRACE COLON suite

    ID    shift, and go to state 9
    STAR  shift, and go to state 45

    $default  reduce using rule 18 (func_args_list)

    func_args_list  go to state 46
    func_arg        go to state 47
    star_arg        go to state 48
    dotted_name     go to state 49


state 31

   31 calls_chain: func_call DOT func_call .

    $default  reduce using rule 31 (calls_chain)


state 32

   32 func_call: dotted_name . LBRACE call_params RBRACE
   34 dotted_name: dotted_name . DOT ID

    DOT     shift, and go to state 26
    LBRACE  shift, and go to state 27


state 33

   34 dotted_name: dotted_name DOT ID .

    $default  reduce using rule 34 (dotted_name)


state 34

   37 call_params: DEFINED .

    $default  reduce using rule 37 (call_params)


state 35

   36 call_params: OTHER .

    $default  reduce using rule 36 (call_params)


state 36

   40 call_params: STAR .

    $default  reduce using rule 40 (call_params)


state 37

   38 call_params: MESSAGE .

    $default  reduce using rule 38 (call_params)


state 38

   41 call_params: func_call .

    $default  reduce using rule 41 (call_params)


state 39

   32 func_call: dotted_name . LBRACE call_params RBRACE
   34 dotted_name: dotted_name . DOT ID
   39 call_params: dotted_name .

    DOT     shift, and go to state 26
    LBRACE  shift, and go to state 27

    LBRACE    [reduce using rule 39 (call_params)]
    $default  reduce using rule 39 (call_params)


state 40

   32 func_call: dotted_name LBRACE call_params . RBRACE
   42 call_params: call_params . DEFINED
   43            | call_params . MESSAGE
   44            | call_params . dotted_name
   45            | call_params . OTHER
   46            | call_params . func_call
   47            | call_params . COMMA
   48            | call_params . COLON
   49            | call_params . STAR
   50            | call_params . LBRACE call_params RBRACE

    DEFINED  shift, and go to state 50
    COLON    shift, and go to state 51
    LBRACE   shift, and go to state 52
    RBRACE   shift, and go to state 53
    ID       shift, and go to state 9
    OTHER    shift, and go to state 54
    COMMA    shift, and go to state 55
    STAR     shift, and go to state 56
    MESSAGE  shift, and go to state 57

    func_call    go to state 58
    dotted_name  go to state 59


state 41

   12 class_arg: ID .

    $default  reduce using rule 12 (class_arg)


state 42

    9 inheritance: LBRACE class_args_list . RBRACE

    RBRACE  shift, and go to state 60


state 43

   11 class_args_list: class_arg .
   13 class_arg: class_arg . COMMA
   14          | class_arg . ID
   15          | class_arg . DOT

    DOT    shift, and go to state 61
    ID     shift, and go to state 62
    COMMA  shift, and go to state 63

    $default  reduce using rule 11 (class_args_list)


state 44

    6 class_def: CLASS classname inheritance COLON . suite

    $default  reduce using rule 29 (suite)

    suite  go to state 64


state 45

   27 star_arg: STAR . ID
   28         | STAR . STAR ID

    ID    shift, and go to state 65
    STAR  shift, and go to state 66


state 46

   16 func_def: DEF funcname LBRACE func_args_list . RBRACE COLON suite

    RBRACE  shift, and go to state 67


state 47

   19 func_args_list: func_arg .
   22 func_arg: func_arg . OTHER
   23         | func_arg . COMMA
   24         | func_arg . dotted_name
   25         | func_arg . star_arg
   26         | func_arg . MESSAGE

    ID       shift, and go to state 9
    OTHER    shift, and go to state 68
    COMMA    shift, and go to state 69
    STAR     shift, and go to state 45
    MESSAGE  shift, and go to state 70

    $default  reduce using rule 19 (func_args_list)

    star_arg     go to state 71
    dotted_name  go to state 72


state 48

   21 func_arg: star_arg .

    $default  reduce using rule 21 (func_arg)


state 49

   20 func_arg: dotted_name .
   34 dotted_name: dotted_name . DOT ID

    DOT  shift, and go to state 26

    $default  reduce using rule 20 (func_arg)


state 50

   42 call_params: call_params DEFINED .

    $default  reduce using rule 42 (call_params)


state 51

   48 call_params: call_params COLON .

    $default  reduce using rule 48 (call_params)


state 52

   50 call_params: call_params LBRACE . call_params RBRACE

    DEFINED  shift, and go to state 34
    ID       shift, and go to state 9
    OTHER    shift, and go to state 35
    STAR     shift, and go to state 36
    MESSAGE  shift, and go to state 37

    DEFINED   [reduce using rule 35 (call_params)]
    ID        [reduce using rule 35 (call_params)]
    OTHER     [reduce using rule 35 (call_params)]
    STAR      [reduce using rule 35 (call_params)]
    MESSAGE   [reduce using rule 35 (call_params)]
    $default  reduce using rule 35 (call_params)

    func_call    go to state 38
    dotted_name  go to state 39
    call_params  go to state 73


state 53

   32 func_call: dotted_name LBRACE call_params RBRACE .

    $default  reduce using rule 32 (func_call)


state 54

   45 call_params: call_params OTHER .

    $default  reduce using rule 45 (call_params)


state 55

   47 call_params: call_params COMMA .

    $default  reduce using rule 47 (call_params)


state 56

   49 call_params: call_params STAR .

    $default  reduce using rule 49 (call_params)


state 57

   43 call_params: call_params MESSAGE .

    $default  reduce using rule 43 (call_params)


state 58

   46 call_params: call_params func_call .

    $default  reduce using rule 46 (call_params)


state 59

   32 func_call: dotted_name . LBRACE call_params RBRACE
   34 dotted_name: dotted_name . DOT ID
   44 call_params: call_params dotted_name .

    DOT     shift, and go to state 26
    LBRACE  shift, and go to state 27

    LBRACE    [reduce using rule 44 (call_params)]
    $default  reduce using rule 44 (call_params)


state 60

    9 inheritance: LBRACE class_args_list RBRACE .

    $default  reduce using rule 9 (inheritance)


state 61

   15 class_arg: class_arg DOT .

    $default  reduce using rule 15 (class_arg)


state 62

   14 class_arg: class_arg ID .

    $default  reduce using rule 14 (class_arg)


state 63

   13 class_arg: class_arg COMMA .

    $default  reduce using rule 13 (class_arg)


state 64

    6 class_def: CLASS classname inheritance COLON suite .

    $default  reduce using rule 6 (class_def)


state 65

   27 star_arg: STAR ID .

    $default  reduce using rule 27 (star_arg)


state 66

   28 star_arg: STAR STAR . ID

    ID  shift, and go to state 74


state 67

   16 func_def: DEF funcname LBRACE func_args_list RBRACE . COLON suite

    COLON  shift, and go to state 75


state 68

   22 func_arg: func_arg OTHER .

    $default  reduce using rule 22 (func_arg)


state 69

   23 func_arg: func_arg COMMA .

    $default  reduce using rule 23 (func_arg)


state 70

   26 func_arg: func_arg MESSAGE .

    $default  reduce using rule 26 (func_arg)


state 71

   25 func_arg: func_arg star_arg .

    $default  reduce using rule 25 (func_arg)


state 72

   24 func_arg: func_arg dotted_name .
   34 dotted_name: dotted_name . DOT ID

    DOT  shift, and go to state 26

    $default  reduce using rule 24 (func_arg)


state 73

   42 call_params: call_params . DEFINED
   43            | call_params . MESSAGE
   44            | call_params . dotted_name
   45            | call_params . OTHER
   46            | call_params . func_call
   47            | call_params . COMMA
   48            | call_params . COLON
   49            | call_params . STAR
   50            | call_params . LBRACE call_params RBRACE
   50            | call_params LBRACE call_params . RBRACE

    DEFINED  shift, and go to state 50
    COLON    shift, and go to state 51
    LBRACE   shift, and go to state 52
    RBRACE   shift, and go to state 76
    ID       shift, and go to state 9
    OTHER    shift, and go to state 54
    COMMA    shift, and go to state 55
    STAR     shift, and go to state 56
    MESSAGE  shift, and go to state 57

    func_call    go to state 58
    dotted_name  go to state 59


state 74

   28 star_arg: STAR STAR ID .

    $default  reduce using rule 28 (star_arg)


state 75

   16 func_def: DEF funcname LBRACE func_args_list RBRACE COLON . suite

    $default  reduce using rule 29 (suite)

    suite  go to state 77


state 76

   50 call_params: call_params LBRACE call_params RBRACE .

    $default  reduce using rule 50 (call_params)


state 77

   16 func_def: DEF funcname LBRACE func_args_list RBRACE COLON suite .

    $default  reduce using rule 16 (func_def)
